Adjustments on JWT implementation
